# licp

./: CMakeLists.txt  compile.sh  readme.org  repl.c  run.sh
include/: concat.h  parser.h  repl.h  tree.h  vector.h
src/: concat.c  main.c  parser.c  repl.c  tree.c  vector.c
test/: concat_test.c  parser_test.c  tree_test.c  vector_test.c
